--- a/src/main/webapp/channel/channel_shedule.xhtml
+++ b/src/main/webapp/channel/channel_shedule.xhtml
@@ -67,7 +67,7 @@
                                                 </f:ajax>
                                             </p:commandButton>
                                             <p:commandButton ajax="false" id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                        return false;" action="#{sheduleController.delete()}"  value="Delete Selected Session" disabled="#{!webUserController.hasPrivilege('ChannellingChannelShedulRemove')}" >
+                                                        return false;" action="#{sheduleController.delete()}"  value="Delete Selected Session" disabled="#{!webUserController.hasPrivilege('ChannellingChannelShedulRemove') and false}" >
                                             </p:commandButton>
                                         </h:panelGrid>
                                         <p:panelGrid columns="1" >
