Corrected Create new User issue

--- a/src/main/webapp/resources/channel/channelRecipt.xhtml
+++ b/src/main/webapp/resources/channel/channelRecipt.xhtml
@@ -91,7 +91,7 @@
                                     <tr>
                                         <td>
                                             <b>
-                                                <h:outputLabel value="Consultant" style="font-size: 15px!important"></h:outputLabel>
+                                                                     <h:outputLabel value="#{cc.attrs.bill.singleBillSession.staff.registration}" ></h:outputLabel>
                                             </b>
                                         </td>
                                         <td>
