--- a/src/main/webapp/resources/bill/dealerPayment.xhtml
+++ b/src/main/webapp/resources/bill/dealerPayment.xhtml
@@ -1,22 +1,22 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html  xmlns:cc="http://java.sun.com/jsf/composite"
-       xmlns:h="http://java.sun.com/jsf/html"
-       xmlns:p="http://primefaces.org/ui"
-       xmlns:f="http://java.sun.com/jsf/core">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:cc="http://xmlns.jcp.org/jsf/composite"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <!-- INTERFACE -->
     <cc:interface>
         <cc:attribute name="bill" type="com.divudi.entity.Bill"/>
-        <cc:attribute name="billController"  />
+        <cc:attribute name="billController" type="com.divudi.bean.pharmacy.PharmacyDealorBill" />
         <cc:attribute name="dup" type="java.lang.Boolean" />
     </cc:interface>
 
-    <!-- IMPLEMENTATION -->
+     <!-- IMPLEMENTATION -->
     <cc:implementation>
 
         <div >
-            Bill
             <div >
                 <div >
 
@@ -158,7 +158,7 @@
                                  left: 0%!important;
                                  top: 19%!important;
                                  font-size: 12px!important;">
-                                <h:outputLabel value="OPD Credit Settlement" rendered="#{cc.attrs.billController.billItems.get(0).patientEncounter eq null}"/>
+                                <h:outputLabel value="Distributer Credit Settlement" rendered="#{cc.attrs.billController.billItems.get(0).patientEncounter eq null}"/>
                                 <h:outputLabel value="BHT Credit Settlement" rendered="#{cc.attrs.billController.billItems.get(0).patientEncounter ne null}"/>
                             </div>
 
