--- a/src/main/webapp/resources/bill/grn_payment.xhtml
+++ b/src/main/webapp/resources/bill/grn_payment.xhtml
@@ -96,7 +96,7 @@
                     <h:outputLabel value="Amount : Rs. #{0-cc.attrs.bill.netTotal} " style="position: absolute; left: 70%;"/>
                     <br></br>
                     <br></br>                    
-                    <h:outputLabel value="Received with thanks sum of Rupees  .................................................................................................................................................. Ruhunu Pharmaceuticals &amp; Services (Pvt) Ltd : "/>
+                    <h:outputLabel value="Received with thanks sum of Rupees  .................................................................................................................................................. #{sessionController.loggedUser.institution.name} "/>
                     <br></br>
 
                     <!--                    <div >-->
