--- a/src/main/webapp/dealorPayment/bill_dealor_all.xhtml
+++ b/src/main/webapp/dealorPayment/bill_dealor_all.xhtml
@@ -50,7 +50,9 @@
                                             value="#{pharmacyDealorBill.institution}"
                                             completeMethod="#{institutionController.completeSuppliers}"
                                             var="ix" itemLabel="#{ix.name}"
-                                            itemValue="#{ix}" size="30"  style="width: 400px;"
+                                            itemValue="#{ix}" size="30"
+                                            maxResults="30"
+                                            style="width: 400px;"
                                             converter="institutionConverter">                                  
                                 <p:column headerText="Name">
                                     #{ix.name}
@@ -58,10 +60,11 @@
                                 <p:column headerText="Code">
                                     #{ix.institutionCode}
                                 </p:column>
-                                <f:ajax event="itemSelect" execute="@this" 
-                                        render=" :#{p:component('itms')} total" 
-                                        listener="#{pharmacyDealorBill.selectInstitutionListener()}"/>
+                                
                             </p:autoComplete>  
+                            <p:commandButton ajax="false" value="LOAD" 
+                                             action="#{pharmacyDealorBill.selectInstitutionListener()}" >
+                            </p:commandButton>
                             <p:panel  id="total" style="min-width: 100%;">
 
                                 <p:panelGrid  columns="2" >
