--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,26 +10,30 @@
     <h:head >
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
         </link>
     </h:head>
-    <h:body>
-        <div >
-            <div class="container h-100">
-                <div class="row h-100 justify-content-center align-items-center">
-                    <form class="col-12">
-                        <div class="form-group">
-                            <label for="formGroupExampleInput">Example label</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
-                        </div>
-                        <div class="form-group">
-                            <label for="formGroupExampleInput2">Another label</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-                        </div>
-                    </form>   
-                </div>
+    <h:body class="container h-100" style="height: 100vh;">
+
+        <div class="row" >
+            <div class="col" >
+                <h1>Horizon Healthcare Services</h1>
             </div>
         </div>
+
+        <div class="row" >
+            <div class="col" >
+                <a href="http://34.142.182.167/sahana/" >OLD Application</a>
+            </div>
+        </div>
+
+        <div class="row" >
+            <div class="col" >
+                <a href="http://34.142.182.167/sahana2022/faces/indexweb.xhtml" >New Application</a>
+            </div>
+        </div>
+
+
+
 
 
     </h:body>
