--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,23 +12,23 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
         </link>
     </h:head>
-    <h:body class="container h-100" style="height: 100vh;">
+    <h:body class="container h-100 text-center p-3" style="height: 100vh;">
 
-        <div class="row" >
+        <div class="row p-3 m-3" >
             <div class="col" >
                 <h1>Horizon Healthcare Services</h1>
             </div>
         </div>
 
-        <div class="row" >
+        <div class="row p-3 m-3" >
             <div class="col" >
-                <a href="http://34.142.182.167/sahana/" >OLD Application</a>
+                <a href="http://34.142.182.167/sahana/"  class="btn btn-primary">OLD Application</a>
             </div>
         </div>
 
-        <div class="row" >
+        <div class="row p-3 m-3" >
             <div class="col" >
-                <a href="http://34.142.182.167/sahana2022/faces/indexweb.xhtml" >New Application</a>
+                <a href="http://34.142.182.167/sahana2022/faces/indexweb.xhtml"  class="btn btn-warning">New Application</a>
             </div>
         </div>
 
