Image Added to header

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -28,7 +28,9 @@
 
         <div class="row p-3 m-3" >
             <div class="col" >
-                <a href="http://34.142.182.167/sahana2022/faces/indexweb.xhtml"  class="btn btn-warning">New Application</a>
+                <h:form >
+                    <h:commandLink action="/indexweb.xhtml" class="btn btn-warning">New Application</h:commandLink>
+                </h:form>
             </div>
         </div>
 
