Code corrections to remove xhtml error

--- a/src/main/webapp/clinical/clinical_new_opd_visit.xhtml
+++ b/src/main/webapp/clinical/clinical_new_opd_visit.xhtml
@@ -73,7 +73,7 @@
                                                      >
                                         <f:ajax event="keyup" execute="txtComments" ></f:ajax>
                                     </p:inputTextarea>
-                                    <p:watermark forElement="txtComments" value="Write comments here." ></p:watermark>
+                                    <p:watermark for="txtComments" value="Write comments here." ></p:watermark>
                                 </p:panel>
                                 <p:panel header="Diagnosis" styleClass="alignTop" >
                                     <h:panelGrid columns="1" styleClass="alignTop" >
