Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -33,6 +33,14 @@
                 </h:form>
             </div>
         </div>
+        
+         <div class="row p-3 m-3" >
+            <div class="col" >
+                <h:form >
+                    <h:commandLink action="/index_2.xhtml" class="btn btn-warning">Login</h:commandLink>
+                </h:form>
+            </div>
+        </div>
 
 
 
